Fixed content shift issue on mobile.

--- a/src/components/radio/RadioWidget.module.scss
+++ b/src/components/radio/RadioWidget.module.scss
@@ -16,6 +16,7 @@
   flex-grow: 1;
   gap: 24px;
   justify-content: center;
+  overflow: hidden;
   width: 100%;
 }
 
@@ -54,5 +55,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+
+  .nowPlaying {
+    height: 171px;
   }
 }
